--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorActivityBackground">#11000000</color>
+    <color name="colorTextTitle">#BB000000</color>
+    <color name="colorTextDescription">#88000000</color>
 </resources>
