--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="list_vertical_margin">3dp</dimen>
+    <dimen name="list_horizontal_margin">10dp</dimen>
+    <dimen name="title_text_size">23sp</dimen>
+    <dimen name="description_text_size">18sp</dimen>
 </resources>
